fixed cart page head alignment

--- a/src/UI/CartPage/CartList/CartList.module.css
+++ b/src/UI/CartPage/CartList/CartList.module.css
@@ -8,7 +8,6 @@
 }
 
 .cart12Head {
-    margin: 1rem 0;
     text-transform: uppercase;
 }
 
